🔒 代码质量与安全性加固
✨ 新功能：
- 新增纠错记忆功能（correction_memory.py）：<cmd>+<shift>+m 快捷记录原文→修订对
- 新增服务注册中心（service_registry.py）：单例管理 Gemini 服务，避免重复初始化
- 新增配置验证系统：启动时自动检查 API 密钥、数值范围、文件路径等配置合法性
- 提示词增强：自动注入词典、纠错示例、近期会话上下文

🔒 安全加固：
- API 密钥哈希从 SHA1 升级到 SHA256（12位指纹），提升安全性
- 为全局热键监听器添加线程锁保护，避免竞态条件
- 改进错误处理：使用具体异常类型（OSError、PermissionError、JSONDecodeError）

🛠️ 代码质量：
- 为 correction_memory.py 和 service_registry.py 添加完整类型注解和文档字符串
- 配置管理优化：魔法数字迁移到 config.py，添加详细注释
- 服务初始化失败时快速失败（Fail Fast），避免未就绪对象传播
- 输入验证：文本长度限制、数值范围检查、路径存在性验证

📚 文档更新：
- 更新 memory-timeline.md 记录代码审查会话
- 新增 cards.md 中的「代码安全最佳实践」章节
- 完善错误处理、线程安全、配置管理等最佳实践说明

🎨 其他改进：
- 提示词调整：陈述句末尾不带句号，保持简洁
- 热键配置增强：支持 Left Option / Command 等可配置长按键
- 录音统计优化：结构化报告输出，减少冗余信息

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai-whisper>=20250625",
     "pynput>=1.8.1",
     "pyobjc-core>=11.1",
+    "pyobjc-framework-applicationservices>=11.1",
     "pyobjc-framework-avfoundation>=11.1",
     "pyobjc-framework-speech>=11.1",
     "pyperclip>=1.9.0",
