--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,17 @@ HTTPS_PROXY=http://127.0.0.1:7890
 
 # 其他可选配置
 # WHISPER_MODEL_PATH=/path/to/your/model.bin
+
+# ==================== 语音活动检测 (VAD) 配置 ====================
+# VAD 激进模式 (0-3, 越高越容易把一句话切成多段)
+VAD_AGGRESSIVENESS=3
+# VAD 音频帧长 (毫秒, 一般为 10, 20, 或 30)
+VAD_FRAME_MS=30
+# VAD 静音填充 (毫秒, 在语音前后添加的静音时长)
+VAD_PADDING_MS=300
+# VAD 语音帧比例 (在一个窗口中, 有语音的帧占多少比例才算有语音)
+VAD_RATIO=0.75
+
+# ==================== 性能优化配置 ====================
+# 是否启用二次文本校正 (禁用后响应更快, 但可能牺牲一定准确性)
+ENABLE_CORRECTION=True
