🚀 项目重构：引入 TypeScript 版本
📦 项目结构调整：
- 将现有 Python 代码移动到 python/ 目录
- 创建 typescript/ 目录用于 TypeScript 重构版本
- 保持双语言版本并行开发

✨ TypeScript 项目初始化：
- 完整的 TypeScript 配置 (tsconfig.json)
- 现代化工具链：ESLint + Prettier + Vitest
- 模块化目录结构：core/services/managers/utils/types
- 基础类型定义和日志工具
- Hello World 示例和开发脚本

📚 文档更新：
- 新增 TS_REFACTOR_PLAN.md 详细重构方案
- 更新主 README.md 说明双版本结构
- 更新 .gitignore 添加 TypeScript 相关规则

🎯 架构设计：
- 分层架构：Presentation -> Application -> Domain -> Infrastructure
- 依赖注入（IoC）准备
- 事件驱动架构规划
- Result 模式错误处理
- Zod 配置验证

📋 开发路线图（12周）：
Phase 1: 基础设施（配置系统、日志系统）
Phase 2: 核心服务（Gemini、音频、词典）
Phase 3: 业务逻辑（会话管理、分段处理）
Phase 4: 用户交互（热键、自动粘贴、通知）
Phase 5: 性能优化
Phase 6: 文档与发布

💡 技术栈选择：
- Runtime: Node.js 20+ LTS
- Language: TypeScript 5.0+
- Package Manager: pnpm
- Bundler: tsup / esbuild
- Test: Vitest
- AI SDK: @google/generative-ai

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,20 @@ test_*.py
 *.sh.bak
 # @generate-docs.sh
 docs/code2prompt-output
+
+# ==================== TypeScript ====================
+
+# TypeScript 构建输出
+typescript/node_modules/
+typescript/dist/
+typescript/.turbo/
+typescript/*.tsbuildinfo
+
+# TypeScript 测试和覆盖率
+typescript/coverage/
+typescript/.nyc_output/
+
+# TypeScript 环境文件
+typescript/.env
+typescript/.env.local
+typescript/.env.*.local
