--- a/typescript/package.json
+++ b/typescript/package.json
@@ -7,6 +7,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "dev": "tsx src/index.ts",
+    "cli": "tsx src/cli.ts",
     "build": "tsup",
     "start": "node dist/index.js",
     "test": "vitest",
