--- a/typescript/package.json
+++ b/typescript/package.json
@@ -31,10 +31,12 @@
     "@google/generative-ai": "^0.21.0",
     "clipboardy": "^4.0.0",
     "dotenv": "^16.4.5",
+    "uuid": "^13.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
+    "@types/uuid": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "eslint": "^8.57.0",
